# MiniSSG

./: .gitignore  CMakeLists.txt  README.md  config.yaml
docs/: ARCHITECTURE.md  USER_GUIDE.md
include/builder/: build_utils.h  builder.h
include/cli/: cli.h  command.h
include/core/: article.h  config.h  document.h  types.h
include/parser/: frontmatter_parser.h  heading_corrector.h  markdown_parser.h  parser.h
include/renderer/: html_renderer.h  renderer.h
posts/: 2026-07-08-getting-started-with-c.md  2026-07-08-my-second-post.md  test.md
scripts/: embed_theme.py
src/: CMakeLists.txt  main.cpp
src/builder/: CMakeLists.txt  build_categories.cpp  build_config.cpp  build_index.cpp  build_tags.cpp  build_utils.cpp  build_utils.h  builder.cpp
src/cli/: CMakeLists.txt  cli.cpp  command_build.cpp  command_clean.cpp  command_new.cpp  command_newsite.cpp  command_serve.cpp  commands.cpp  demo.cpp
src/core/: CMakeLists.txt
src/parser/: CMakeLists.txt  demo.cpp  heading_corrector.cpp  parser.cpp
src/renderer/: CMakeLists.txt  renderer.cpp
tests/: CMakeLists.txt
themes/default/: categories.html  category.html  index.html  post.html  tag.html  tags.html
themes/minimal/: categories.html  category.html  index.html  post.html  tag.html  tags.html
themes/minimal/assets/: cat-tree.js  filter.js  graph.js  heatmap.js  image.js  style.css  theme.js  toc.js  tree.js
